# PETsysUtils

./: .gitignore  README.md  acquire_sipm_data  meta.py  metadata_params.txt  plotBinary.py
FileParsers/: CMakeLists.txt  CoincidenceProcess.cpp  SortBinaries.cpp
FileParsers/include/: CoincidenceProcess.h  DataStructures.h  MultithreadSort.h  ReadBinary.h  ReadPlain.h  kwaymergesort.h
FileParsers/kway-mergesort-master/: CMakeLists.txt  README.rst  SortBinary.cpp  SortBinary.h  TestMergeCustomStruct.cpp  kwaymergesort.h
FileParsers/src/: CoincidenceProcess.cpp  ReadBinary.cpp  ReadPlain.cpp
Macros/: ReadCoincidence.py  SubtractCoincBackground.py  bkgdSub.py  coincBkgdSub.py  coincDisplay.py  readLargeBinary.py  readingBinary.py  testScript.py
PEfit/: PEfit.C  PEfit.py
Templates/: exampleImportBinary.py
Test Files/: readLargeBinary.py
binaryRead/: plotBinary.py
metaData/: acquire_sipm_data  daqd.py  gui_layout.glade  meta.py  metadata_params.txt  start_gui
timeOffsets/: evaluateOffsetCalib.C  extractTimeOffsets.C  plotTimeOffsets.C
